learning/day-11_network-policy/netpol-project/k8s/frontenddeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
      tier: web
  template:
    metadata:
      labels:
        app: frontend
        tier: web
    spec:
      containers:
        - name: frontend
          image: beekeeper27/frontend:v1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: frontend
spec:
  type: NodePort
  selector:
    app: frontend
    tier: web
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
